# apples2apples

./: .gitignore  README.md  apples2apples.py  infile.txt  pyproject.toml  setup.cfg
src/: apples2apples.py  cmd_line.py  fitting.py  inout.py  main.py  modelling.py  utils.py
