
[metadata]
name         = apples2apples
version      = 0.0.1
author       = "Santeri Paajanen, Sakari Pirnes"
author_email = santeri.e.paajanen@helsinki.fi
description  = A tool for comparing apples to oranges
long_description = file: README.md
classifiers  = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
dependencies = 
    numpy
    biopython
    mdanalysis

[options]
package_dir =
    apples2apples = src
python_requires = >=3.7
install_requires =
    numpy>=1.21
    MDAnalysis>=2.0

[options.entry_points]
console_scripts =
    apples2apples = apples2apples:main.main

    